# rofi

./: .gitignore  Makefile.am  configure.ac
include/: view-internal.h
rust/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
rust/c_headers/: box.h  widget_internal_.h
rust/src/: _box.rs  bindings.rs  box.rs  box_.rs  lib.rs  pub_functions.rs  rofi-types.rs  rofi_types.rs  theme.rs  widget-internal.rs  widget.rs  widget_.rs  widget_internal.rs
rust/src/pub_functions/: Cargo.toml
rust/src/pub_functions/src/: lib.rs
source/: view.c
source/widgets/: listview.c
