[package]
name = "rust"
version = "0.1.0"
authors = ["Philip Koslowski <philip.koslowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pub_functions = {path = "src/pub_functions"}
cairo-rs = "0.9.1"
cairo-sys-rs = "0.10.0"
libc = "0.2.74"
glib = "0.10.1"
glib-sys = "0.10.0"
gtypes = "0.2.0"
xcb = "0.9.0"
cty = "0.2.1"

[build-dependencies]
bindgen = "0.54.1"
cc = "1.0.58"

[lib]
name = "rust_internals"
crate-type = ["staticlib"]
